<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
        android:id="@id/selected_rouetes"
        android:icon="@drawable/baseline_terrain_black_48"
        android:title="@string/main_navigation_item_title_routes" />

    <item
        android:id="@id/selected_workouts"
        android:icon="@drawable/ic_baseline_fitness_center_24"
        android:title="@string/main_navigation_item_title_workouts" />

    <item
        android:id="@id/selected_calories"
        android:icon="@drawable/baseline_directions_run_black_48"
        android:title="@string/main_navigation_item_title_calories" />

        <item
            android:id="@id/selected_playlists"
            android:icon="@drawable/ic_baseline_music_note_24"
            android:title="@string/Playlists"
            />

        <item
            android:id="@id/statitics"
            android:icon="@drawable/baseline_bar_chart_black_48"
            android:title="@string/statistics"
            />

        <item
            android:id="@id/reminder"
            android:icon="@drawable/clock"
            android:title="@string/reminder"
            />

        <item
            android:id="@id/favorite"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favourite"
            />
        <item
            android:id="@id/logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />

    </group>
</menu>