<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/light_grey"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_workout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >
    </androidx.appcompat.widget.SearchView>


    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radio_group_sort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/search_workout"
        app:layout_constraintStart_toStartOf="@id/search_workout"
        >
        <RadioButton android:id="@+id/radio_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_steps"
            ></RadioButton>
        <RadioButton android:id="@+id/radio_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_duration"></RadioButton>
        <RadioButton android:id="@+id/radio_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_distance"></RadioButton>

        <RadioButton
            android:id="@+id/radio_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_date" />

        <RadioButton
            android:id="@+id/radio_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/show_all_workouts" />
    </RadioGroup>



    <Button
        android:id="@+id/button_close_filter_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/close_dialog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_sort"
        app:layout_constraintVertical_bias="0.151"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>