<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="1000dp"
    android:minHeight="450dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".playlist.PlaylistsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_show_playlists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/showplaylists"
            app:layout_constraintBottom_toTopOf="@id/button_create_playlist"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </com.google.android.material.button.MaterialButton>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:text="@string/create_playlist"
            app:layout_constraintTop_toBottomOf="@id/button_show_playlists"
            app:layout_constraintBottom_toTopOf="@id/recycler_view_playlists"
            app:layout_constraintRight_toRightOf="@id/button_show_playlists"
           >


        </com.google.android.material.button.MaterialButton>

        <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_playlists"
        android:layout_width="match_parent"
        android:layout_height="0dp"
            android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/button_create_playlist"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/view_holder_song"
            />

        <TextView
            android:id="@+id/empty_playlists_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/no_songs"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_create_playlist"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>