<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".workouts.WorkoutOnMapFragment">


<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/con_info"
    android:background="@color/my_green"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/con_info2">

        <ImageView
            android:id="@+id/imageView2"
            android:background="@color/my_green"
            android:backgroundTint="@color/my_green"
            android:src="@drawable/loc"
            android:layout_marginLeft="10dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
           app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </ImageView>

    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="10dp"
        android:textSize="16dp"
        android:text=""
        app:layout_constraintLeft_toRightOf="@id/imageView2"
        app:layout_constraintTop_toTopOf="@id/imageView2"
        android:textStyle="bold"
        android:textColorHint="@color/light_grey"
        />

    <TextView
        android:id="@+id/nameW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/name"
        app:layout_constraintLeft_toRightOf="@id/imageView2"
        app:layout_constraintTop_toBottomOf="@id/information"
        android:textStyle="bold"
        android:textColorHint="@color/light_grey"
        />

    <TextView
        android:id="@+id/dateW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datew"
        app:layout_constraintLeft_toLeftOf="@id/nameW"
        app:layout_constraintTop_toBottomOf="@+id/nameW"
        android:textStyle="bold"
        android:textColorHint="@color/light_grey"
        />

    <TextView
        android:id="@+id/distanceW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        app:layout_constraintLeft_toLeftOf="@id/nameW"
        app:layout_constraintTop_toBottomOf="@+id/dateW"
        android:textStyle="bold"
        android:textColorHint="@color/light_grey" />

    <TextView
        android:id="@+id/paceW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pace"
        app:layout_constraintLeft_toLeftOf="@id/nameW"
        app:layout_constraintTop_toBottomOf="@+id/distanceW"
        android:textStyle="bold"
        android:textColorHint="@color/light_grey" />

    <TextView
        android:id="@+id/durationW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/duration"
        app:layout_constraintLeft_toLeftOf="@id/nameW"
        app:layout_constraintTop_toBottomOf="@+id/paceW"
        android:textStyle="bold"
        android:textColorHint="@color/light_grey" />

    <TextView
        android:id="@+id/nameWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="43dp"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@id/information"
       app:layout_constraintLeft_toRightOf="@+id/nameW" />

    <TextView
        android:id="@+id/dateWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@id/nameWorkout"
        app:layout_constraintLeft_toLeftOf="@+id/nameWorkout" />

    <TextView
        android:id="@+id/distanceWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@id/dateWorkout"
        app:layout_constraintLeft_toLeftOf="@+id/nameWorkout" />

    <TextView
        android:id="@+id/paceWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@id/distanceWorkout"
        app:layout_constraintLeft_toLeftOf="@+id/nameWorkout" />
    <TextView
        android:id="@+id/durationWorkout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintTop_toBottomOf="@id/paceWorkout"
        app:layout_constraintLeft_toLeftOf="@+id/nameWorkout" />

</androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_info2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/con_info"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        >
        <fragment
            android:id="@+id/google_map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"        app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/con_info3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/con_info"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        >
        <TextView
            android:id="@+id/didntmove"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:name="com.google.android.gms.maps.SupportMapFragment"        app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            android:text="@string/youdidntrun"
            >

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>